SUBDIRS = gauche

ARCH = @target@
SCM_INSTALL_DIR       = $(DESTDIR)$(pkgdatadir)/$(VERSION)/lib
ARCH_INSTALL_DIR      = $(DESTDIR)$(pkglibdir)/$(VERSION)/@target@
SITE_SCM_DIR          = $(DESTDIR)$(pkgdatadir)/site/lib
SITE_ARCH_DIR         = $(DESTDIR)$(pkglibdir)/site/$(VERSION)/@target@

SUFFIXES = .stub

INCLUDES += @INCLTDL@
AM_CFLAGS  = -I../gc -I../gc/include

#
# Main program section
#
bin_PROGRAMS = gosh
bin_SCRIPTS  = gauche-config

gosh_SOURCES = main.c
gosh_LDADD   = libgauche.la @LIBLTDL@
gosh_LDFLAGS = # -dlopen force

lib_LTLIBRARIES = libgauche.la

STUBS = stdlib.stub extlib.stub exclib.stub syslib.stub moplib.stub
libgauche_la_SOURCES = \
	core.c vm.c compile.c macro.c error.c class.c boolean.c char.c \
	string.c list.c port.c hash.c write.c read.c vector.c weak.c \
	symbol.c keyword.c compare.c regexp.c signal.c parameter.c \
	module.c proc.c number.c bignum.c load.c promise.c repl.c \
	system.c $(STUBS:.stub=.c)
libgauche_la_LDFLAGS = -no-undefined -version-info 0:0:0
libgauche_la_LIBADD  = ../gc/libgc.la

GENERATED = gauche/arch.h

# This rule requires pre-compiled "gosh".
.stub.c:
	gosh ./genstub -D LIBGAUCHE_BODY $<

stdlib.c : stdlib.stub genstub
extlib.c : extlib.stub genstub
exclib.c : exclib.stub genstub
syslib.c : syslib.stub genstub
moplib.c : moplib.stub genstub

port.o : port.c portapi.c

$(OBJECTS): gauche/arch.h

# other files
pkgscmdir = $(SCM_INSTALL_DIR)

pkgscm_DATA = genstub gauche-init.scm

pkggauchehdrdir = $(pkglibdir)/$(VERSION)/include

pkggauchehdr_HEADERS = gauche.h gauche-config.h

#
# test section
#
TESTFILES = `cat ../test/TESTS`

check_PROGRAMS = test-vmstack test-arith

test_vmstack_SOURCES = test-vmstack.c
test_vmstack_LDADD   = libgauche.la @LIBLTDL@

test_arith_SOURCES   = test-arith.c
test_arith_LDADD     = libgauche.la @LIBLTDL@

test-arith.o : gauche/arith.h


check : test

test : gosh
	@rm -f test.log
	$(MAKE) test-vmstack; ./test-vmstack >> test.log
	$(MAKE) test-arith; ./test-arith >> test.log
	@for testfile in $(TESTFILES); do \
	  ./gosh -ftest -I../test $$testfile >> test.log; \
	done
	@./gosh -ftest -e "(define *case-fold* #f)" ../test/symcase.scm >> test.log
	@./gosh -ftest -fcase-fold -e "(define *case-fold* #t)" ../test/symcase.scm >> test.log
	@echo "See test.log for details."

gauche/arch.h :
	rm -f gauche/arch.h
	echo "/* Generated by Makefile.  DO NOT EDIT */"           > gauche/arch.h
	echo '#define GAUCHE_ARCH          "$(ARCH)"'             >> gauche/arch.h
	echo '#define GAUCHE_LIB_DIR       "$(SCM_INSTALL_DIR)"'  >> gauche/arch.h
	echo '#define GAUCHE_ARCH_DIR      "$(ARCH_INSTALL_DIR)"' >> gauche/arch.h
	echo '#define GAUCHE_SITE_LIB_DIR  "$(SITE_SCM_DIR)"'     >> gauche/arch.h
	echo '#define GAUCHE_SITE_ARCH_DIR "$(SITE_ARCH_DIR)"'    >> gauche/arch.h

#
# cleaning
#
CLEANFILES += test.log $(GENERATED)
DISTCLEANFILES += $(GENERATED) gauche/stamp-h gauche/stamp-h.in gauche/stamp-h[0-9]*
MAINTAINERCLEANFILES += Makefile.in configure gauche-config.h.in $(STUBS:.stub=.c)

# end
