dnl
dnl Configure auxiliary system functions
dnl  process this file with "autoconf -l ../.." to generate 'configure'.
dnl $Id: configure.in,v 1.1 2002-02-21 08:55:52 shirok Exp $
AC_INIT(auxsys.c)
AC_CONFIG_HEADER(auxsysconf.h)
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

# Check for other programs.
AC_PROG_INSTALL

# Checks for header files
AC_HEADER_TIME
AC_CHECK_HEADERS(unistd.h)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions
AC_CHECK_FUNCS(putenv setpgrp getpgid)
AC_CHECK_FUNCS(gethostname sethostname getdomainname setdomainname)

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(auxsys)
AC_OUTPUT(Makefile)
