dnl
dnl Configuring Gauche-md5
dnl  process this file with "autoconf --include `gauche-config --ac`"
dnl  to generate 'configure'.
dnl $Id: configure.in,v 1.3 2003-04-12 03:40:57 shirok Exp $

AC_INIT(md5.stub)
AC_CANONICAL_SYSTEM
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

# Check for other programs.
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Check for types
AC_C_BIGENDIAN
AC_CHECK_TYPES([u_int8_t, uint8_t])
AC_CHECK_TYPES([u_int32_t, uint32_t])
AC_CHECK_TYPES([u_int64_t, uint64_t])

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(md5)
AC_GAUCHE_EXT_FIXUP(sha1)
AC_OUTPUT(Makefile)
