dnl
dnl Configure fcntl extension
dnl  process this file with "autoconf -l ../.." to generate 'configure'.
dnl $Id: configure.in,v 1.7 2002-07-18 10:52:22 shirok Exp $
AC_INIT(fcntl.c)
AC_CANONICAL_SYSTEM
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC

# Sets CFLAGS, CPPFLAGS and LDFLAGS
AC_GAUCHE_FLAGS
AC_GAUCHE_OPTFLAGS

# Check for other programs.
AC_PROG_INSTALL

# Add more test

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(fcntl)
AC_OUTPUT(Makefile)
