dnl
dnl Configuring ext/mt-random
dnl
dnl $Id: configure.in,v 1.5 2003-04-12 03:40:57 shirok Exp $
AC_INIT(mt-random.c)
AC_CANONICAL_SYSTEM
AC_GAUCHE_INIT_EXT

# Sets the default value of INSTALL_TYPE macro.
AC_GAUCHE_INSTALL_TYPE(sys)

# Get compiler parameters which Gauche has been compiled with.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

# Check for other programs.
AC_PROG_INSTALL
AC_PROG_LIBTOOL

# Add more test

# Set LDFLAGS to generate shared library.
AC_GAUCHE_FIX_LIBS

# Output
AC_GAUCHE_EXT_FIXUP(mt-random, mtrandom)
AC_OUTPUT(Makefile)
